packages/next-swc/crates/core/tests/errors/react-server-components/server-graph/get-server-side-props/output.js
export function getServerSideProps() {}
export default function() {
    return null;
}
